FINALLY fixed address. Needs wrapping, but not a concern for this iteration

--- a/app/assets/stylesheets/productDetailsPage.scss
+++ b/app/assets/stylesheets/productDetailsPage.scss
@@ -4,7 +4,7 @@
 .vendorName {
   color: white;
   font-weight: normal;
-  font-size: 2.25vw;
+  font-size: 1.75vw;
   font-family: 'Arvo', sans-serif;
   overflow: hidden;
   outline:none;
