--- a/app/assets/stylesheets/vendorDetailsPage.scss
+++ b/app/assets/stylesheets/vendorDetailsPage.scss
@@ -4,13 +4,15 @@
 #addr {
   color: white;
   font-weight: normal;
-  font-size: 2.25vw;
+  font-size: 1.75vw;
   font-family: 'Arvo', sans-serif;
   overflow: hidden;
   outline:none;
   word-wrap: none;
   max-width: 75vw;
-  left: 50%;
+  margin-left: 50%;
+  margin-top: 1vh;
+  transform: translateX(-50%);
 }
 
 .socialBtn {
